--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.M2024B" parent="Theme.AppCompat.Light" />
+    <style name="Theme.M2024B" parent="Theme.AppCompat.Light" />"
+<!--    <style name="Theme.M2024B" parent="Theme.AppCompat.Light.NoActionBar" />"-->
 </resources>
