--- a/app/src/main/res/layout/activity_show_date_time.xml
+++ b/app/src/main/res/layout/activity_show_date_time.xml
@@ -23,4 +23,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tvNotificationTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Title"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnShowTime" />
+
+    <TextView
+        android:id="@+id/tvNotificationText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textAlignment="center"
+        android:text="Text"
+        app:layout_constraintTop_toBottomOf="@+id/tvNotificationTitle"
+        tools:layout_editor_absoluteX="171dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
