--- a/app/src/main/res/layout/activity_show_date_time.xml
+++ b/app/src/main/res/layout/activity_show_date_time.xml
@@ -29,12 +29,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="Title"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:visibility="gone"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnShowTime" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tvNotificationText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
